stylesResume.css
* {
    margin: 0px;
    padding: 0px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.welcome {
    font-size: 20px;
    margin-left: 15px;;
}

.navbar {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    color: white;
    background-color: #1b1b1b;
    height: 50px;
    z-index: 1;
}

.navbar-links {
    display: flex;
}

.navbar-links li {
    list-style: none;
    transition: 0.2s;
}

.navbar-links li a {
    text-decoration: none;
    color: white;
    padding: 1rem;
    display: block;
}

.navbar-links li:hover {
    background-color: #2a2a2a;
}

@media screen and (min-width: 1500px) {
    .resume {
        position: relative;
        top: 50px;
        width: 100%;
        height: 975px;
        left: 0px;
        right: 0px;
    }
}

